--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   },
   "dependencies": {
     "blueimp-file-upload": "^10.32.0",
-    "broccoli-funnel": "^3.0.8"
+    "broccoli-funnel": "^3.0.8",
+    "json-server": "^0.17.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
