--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-promise-helpers": "^1.0.6",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.1.0",
+    "ember-truth-helpers": "^3.1.1",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3",
