--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "ember-power-select": "^5.0.4",
     "ember-promise-helpers": "^1.0.6",
     "ember-resolver": "^4.0.0",
+    "ember-simple-auth": "^4.2.2",
+    "ember-simple-auth-token": "^5.3.0",
     "ember-source": "~3.1.0",
     "ember-truth-helpers": "^3.1.1",
     "ember-welcome-page": "^3.0.0",
@@ -56,6 +58,8 @@
     "blueimp-file-upload": "^10.32.0",
     "broccoli-funnel": "^3.0.8",
     "json-server": "^0.17.0",
-    "multer": "^1.4.5-lts.1"
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.2"
   }
 }
