--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-bootstrap": "^3.1.4",
+    "ember-can": "^1.1.1",
     "ember-cli": "~3.1.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
@@ -30,6 +31,7 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-moment-shim": "^3.8.0",
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-sass": "^11.0.1",
     "ember-cli-shims": "^1.2.0",
@@ -39,6 +41,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-moment": "^8.0.1",
     "ember-power-select": "^5.0.4",
     "ember-promise-helpers": "^1.0.6",
     "ember-resolver": "^4.0.0",
